<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginAcitivty"
    android:background="@drawable/svg">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_subtitle"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/app_name"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="17sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/layoutLogin"
        android:fontFamily="@font/roboto_regular"/>

    <RelativeLayout
        android:id="@+id/layoutLogin"
        android:layout_width="360dp"
        android:layout_height="500dp"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_forminput"
        android:elevation="60dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/roboto_regular"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:text="Log in"
            android:textColor="@color/white"
            android:textSize="40dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewLogin"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/et_custom"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="15sp" />


        <com.google.android.material.textfield.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_email"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/et_custom"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15sp"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--    <EditText-->
        <!--        android:id="@+id/et_password"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:hint="@string/password"-->
        <!--        android:layout_marginLeft="15dp"-->
        <!--        android:layout_marginRight="15dp"-->
        <!--        android:layout_marginTop="10dp"-->
        <!--        android:padding="15sp"-->
        <!--        android:inputType="textPassword"-->
        <!--        android:layout_centerInParent="true"-->
        <!--        android:background="@drawable/et_custom"-->
        <!--        android:textSize="15sp"-->
        <!--        />-->

        <!--    <ImageView-->
        <!--        android:id="@+id/showPassword"-->
        <!--        android:layout_width="40dp"-->
        <!--        android:layout_height="40dp"-->
        <!--        android:layout_alignParentRight="true"-->
        <!--        android:layout_centerVertical="true"-->
        <!--        android:layout_marginRight="15dp"-->
        <!--        android:alpha=".5"-->
        <!--        android:padding="5dp"-->
        <!--        android:src="@drawable/show"/>-->

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPasswordLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:text="Forgot Password?"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgotPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_custom"
            android:text="@string/login"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgSwipeRight"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_right"
        android:layout_above="@+id/swipeRight"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/swipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_left_for_login"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>